[package]
name = "neocogi"
version = "0.2.0"
edition = "2018"
license = "BSD-3-Clause"
authors = ["Raja Lehtihet <raja.lehtihet@gmail.com>", "Wael El Oraiby <wael.eloraiby@gmail.com>"]
description = "neocogi rendering lib"
repository = "https://github.com/NeoCogi/neocogi"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-math3d = "0.9.16"
glfw = { version="0.45.0", default-features=false, optional=true }
egui = { version = "0.18.1", default-features=false, optional=true }

[build-dependencies]
gl_generator = "0.14.0"

[features]
default = ["renderer", "ui", "with-fonts", "scene"]
renderer = []
ui = ["renderer", "glfw", "egui"]
with-fonts=["ui", "egui/default_fonts"]
scene = ["renderer"]

[dev-dependencies]
