[package]
name = "neocogi"
version = "0.2.1"
edition = "2018"
license = "BSD-3-Clause"
authors = ["Raja Lehtihet <raja.lehtihet@gmail.com>", "Wael El Oraiby <wael.eloraiby@gmail.com>"]
description = "neocogi rendering lib"
repository = "https://github.com/NeoCogi/neocogi"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-math3d = { version = "0.9.21" }
glfw = { version="0.47.0", default-features=false, optional=true }
bitflags = "1.3.2"
libc = "0.2.138"

[build-dependencies]
gl_generator = "0.14.0"

[features]
default = ["renderer", "scene", "ui", "editor"]
renderer = []
ui = ["renderer", "glfw"]
scene = ["renderer"]
editor = ["renderer", "scene", "ui"]

[dev-dependencies]

