[package]
name = "nc-ui"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nc-renderer = "0.1.1"
glfw = { version="0.42.0", default-features=false }
egui = { version = "0.14.2", default-features=false }
rs-ctypes = "0.1.1"
rs-math3d = "0.9.15"

[dependencies.epaint]
version = "^0.14"
optional = false
default-features = false
features = ["multi_threaded"]
