[package]
name = "nc-ui"
version = "0.1.2"
edition = "2018"
license = "BSD-3-Clause"
authors = ["Raja Lehtihet <raja.lehtihet@gmail.com>", "Wael El Oraiby <wael.eloraiby@gmail.com>"]
description = "neocogi UI lib"
repository = "https://github.com/NeoCogi/neocogi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nc-renderer = "0.1.1"
glfw = { version="0.42.0", default-features=false }
egui = { version = "0.14.2", default-features=false }
rs-ctypes = "0.1.1"

[dependencies.epaint]
version = "^0.14"
optional = false
default-features = false
features = ["multi_threaded"]
